--- a/ChatGPT-WhatsApp-Bot/.env
+++ b/ChatGPT-WhatsApp-Bot/.env
@@ -1,4 +1,4 @@
-TWILIO_ACCOUNT_SID=AC1bee12ed2d4dcad4cc57cdf059f11f54
-TWILIO_AUTH_TOKEN=4208b40e34f8616aba1b5a0d7fe5de00
-OPENAI_API_KEY=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
+TWILIO_ACCOUNT_SID=Go to Twilio and get your Auth Token and SID and paste it here without Inverted/double-inverted commas
+TWILIO_AUTH_TOKEN=
+OPENAI_API_KEY=same for openai api key
 FROM=whatsapp:+14155238886
